2011-01-31  Mario Sanchez Prada  <msanchez@igalia.com>

Reviewed by Martin Robinson.

        [Gtk] atk_text_set_caret_offset returns True even when it is unsuccessful
        https://bugs.webkit.org/show_bug.cgi?id=53389

        Return FALSE when not able to set the caret at the specified offset.

        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
        (webkit_accessible_text_set_caret_offset): Return FALSE when the
        range created is NULL and adjust offset to account for list markers.
2011-01-31  Mario Sanchez Prada  <msanchez@igalia.com>

        Reviewed by Martin Robinson.

        [Gtk] atk_text_set_caret_offset returns True even when it is unsuccessful
        https://bugs.webkit.org/show_bug.cgi?id=53389

        New unit test to check the fix for this bug.

        * tests/testatk.c:
        (testWebkitAtkCaretOffsets): New.
        (main): Add new test.

Canonical link: https://commits.webkit.org/67288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77137 268f45cc-cd09-0410-ab3c-d52691b4dbfc